--- a/README
+++ b/README
@@ -15,16 +15,18 @@ http://www.w3.org/Protocols/rfc2616/rfc2616.html
 HTTP Authentication: Basic and Digest Access Authentication
 http://www.ietf.org/rfc/rfc2617.txt
 
+HTTP Over TLS
+http://www.ietf.org/rfc/rfc2818.txt
+
 HTTP State Management Mechanism
 http://www.ietf.org/rfc/rfc2965.txt
 
 
 == Note
 
-* Tests use Mosh [0] and Ypsilon [1] as R6RS interpreters,
+* Tests use Mosh [0] and Ypsilon [1] as R6RS compliant interpreters,
   with our xUnit library (xunit) [2].
-  So you need to specify (xunit)'s location as $(XUNIT) in
-  "config.mk".
+  So you need to specify (xunit)'s location as $(XUNIT) in "config.mk".
   Then: make test.
 
 
